# jobspy-mcp-server

./: pyproject.toml
jobspy_mcp_server/: server.py
