[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobspy-mcp-server"
version = "1.0.0"
description = "MCP server for JobSpy job scraping library"
authors = [
    { name = "JobSpy MCP", email = "jobspy@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: FastAPI",
]
keywords = ["mcp", "jobspy", "jobs", "scraping", "server"]
urls = { "Homepage" = "https://github.com/yourorg/jobspy-mcp-server", "Source" = "https://github.com/yourorg/jobspy-mcp-server" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "mcp>=1.1.0",
    # Use the kbwhodat/JobSpy fork directly. Fork fixes:
    #  - Indeed: GraphQL radius now Int! (fork provides default 25)
    #  - Glassdoor: URL-encode location, tolerate partial GraphQL errors,
    #    rewrite via selenium-driverless to bypass Cloudflare 403
    #  - Google: replace dead HTTP scraper with selenium-driverless
    #    headless (handles Google's JS-only Jobs gate)
    #  - ZipRecruiter: rewrite to curl_cffi safari17_2_ios web endpoint
    #    (the iOS-app API is dead behind Cloudflare)
    #  - LinkedIn: salary extraction from description body, per-company
    #    cap, parallel detail fetches
    # Upstream's "jobspy>=" was a typo — the package on PyPI is
    # "python-jobspy" — and that PyPI release has all five sources
    # broken anyway, so the git URL form is the right fix.
    "python-jobspy @ git+https://github.com/kbwhodat/JobSpy.git@0ebd47db2b263f41e070a0f5e72687de527440df",
    "pandas>=2.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
jobspy-mcp-server = "jobspy_mcp_server:main"

# Hatchling refuses PEP 508 direct-reference deps (git+URL) by default
# as a security policy. We need them — see the python-jobspy @ git+...
# entry in [project.dependencies] above — so opt in explicitly.
[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
